--- a/interface/index.html
+++ b/interface/index.html
@@ -12,7 +12,7 @@
 		<br />
 		<button onclick="genGcode()">Generate Instructions</button> <span id="status"></span>
 
-		<svg id="image"></svg>
+		<div id="image"></div>
 
 		<script src="svg2gcode.js"></script>
 		<script src="bytecode.js"></script>
