implement cubic bezier curves (c and C commands in svg paths) using @evomotor bezier curve library to convert them to lines in the frontend (see #1)

--- a/interface/index.html
+++ b/interface/index.html
@@ -12,8 +12,9 @@
 		<br />
 		<button onclick="genGcode()">Generate Instructions</button> <span id="status"></span>
 
-		<svg id="image"></svg>
+		<div id="image"></div>
 
+		<script src="bezier.js"></script>
 		<script src="svg2gcode.js"></script>
 		<script src="bytecode.js"></script>
 		<script src="ui.js"></script>
